--- a/html-help.html
+++ b/html-help.html
@@ -14,11 +14,13 @@
 
     <div class="walrus-hidden">
       <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
+      <p><span class="clickable">Click this</span> to show image</p>
     </div>
 
     <div class="walrus-showing">
       <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
       <img src="img/walrus.jpg">
+      <p><span class ="clickable">Click this</span> to hide image</p>
     </div>
   </div>
 </body>
